syntax = "proto3";

package apidefinitions;

option go_package = "./api;AwesomeExpenseTrackerApi";

message LoginUserRequest {
  string username = 1;
  string password = 2;
}

message LoginUserResponse {
  string access_token = 1;
  string refresh_token = 2;
  string expires_at = 3;
  string username = 4;
  string email = 5;
}

message RegisterUserRequest {
  string username = 1;
  string password = 2;
  string confirm_password = 3;
  string email = 4;
}

message RegisterUserResponse {
  string email = 1;
  string username = 2;
}

message DeleteUserRequest {
  string username = 1;
}

message DeleteUserResponse {
  string username = 1;
}

message CreateExpenseRequest {
  string description = 1;
  double amount = 2;
  string category = 3;
}

message CreateExpenseResponse {
  string message = 1;
}

message UpdateExpenseRequest {
  string id = 1;
  string description = 2;
  double amount = 3;
  string category = 4;
}

message UpdateExpenseResponse {
  string message = 1;
}

message DeleteExpenseRequest {
  string id = 1;
}

message DeleteExpenseResponse {
  string message = 1;
}

message GetExpensesRequest {
  string id = 1;
}

message GetExpensesResponse {
  repeated Expense expenses = 1;
}

message Expense {
  string id = 1;
  string description = 2;
  double amount = 3;
  string category = 4;
}

message GenerateReportRequest {
  string id = 1;
  string start_date = 2;
  string end_date = 3;
}

message GenerateReportResponse {
  string report_url = 1;
}

message GetUserProfileRequest {
  string id = 1;
}

message GetUserProfileResponse {
  string username = 1;
  string email = 2;
}

message UpdateUserProfileRequest {
  string id = 1;
  string username = 2;
  string email = 3;
}

message UpdateUserProfileResponse {
  string message = 1;
}

message GetSettingsRequest {
  string id = 1;
}

message GetSettingsResponse {
  string theme = 1;
  string currency = 2;
}

message UpdateSettingsRequest {
  string id = 1;
  string theme = 2;
  string currency = 3;
}

message UpdateSettingsResponse {
  string message = 1;
}
message AuthenticateWithGoogleRequest {
  string id_token = 1;
}

message AuthenticateWithGoogleResponse {
  string url = 1;
}

message AuthenticateWithGoogleCallbackRequest {
  string code = 1;
  string state = 2;
}

message AuthenticateWithGoogleCallbackResponse {
  string access_token = 1;
  string refresh_token = 2;
  string expires_at = 3;
  string name = 4;
  string email = 5;
  string profile_pic = 6;
  string token_type = 7;
  string id_token = 8;
}
